--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>PRACTICAL-3</title>
+        <title>Library of MBIT</title>
         <style>
             body {
                 background-color: rgb(165, 183, 190);
