--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Library of MBIT</title>
+        <link rel="shortcut icon" href="https://res.cloudinary.com/djuf0cyrk/image/upload/v1688995247/favicons/android-chrome-512x512_n4ijfc.png" type="image/x-icon">
         <style>
             body {
                 background-color: rgb(165, 183, 190);
